# Didactic-Brain

./: .gitignore  README.md
firmware/: DidacticBrain.code-workspace
firmware/drivers/: CMakeLists.txt
firmware/drivers/devices/inc/: u8g2_esp32_hal.h
firmware/drivers/devices/src/: u8g2_esp32_hal.c
firmware/projects/LedCodeNervio/: CMakeLists.txt  README.md
firmware/projects/LedCodeNervio/main/: CMakeLists.txt  LedCodeNervio.c
