idf_component_register(SRCS "LedCodeNervio.c" "C:/Repositorios/Didactic-Brain/firmware/drivers/devices/src/u8g2_esp32_hal.c"
                    INCLUDE_DIRS "C:/Repositorios/Didactic-Brain/firmware/drivers/devices/inc" "C:/Repositorios/Didactic-Brain/firmware/drivers/microcontroller/inc"
                    REQUIRES led_strip u8g2 driver)
